--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,6 @@
     border-radius: 0; /* Elimina el borde redondeado en móvil */
   }
 
-  /* .navButtonContainer {
-    display: flex;
-    flex-direction: column;
-  } */
-
   .continuarButton,
   .atrasButton {
     width: 100%;
@@ -549,12 +544,12 @@ input[type="radio"]:checked + .button-label {
   border-color: #007bff;
 }
 
-/* .navButtonContainer {
+.navButtonContainer {
   display: flex;
-  gap: 20px;				   
+  gap: 20px;
   width: 100%;
   max-width: 430px;
-} */
+}
 
 .atrasButton {
   background-color: #ffffff;
@@ -687,6 +682,7 @@ input[type="radio"]:checked + .button-label {
   vertical-align: top;
   margin-bottom: 25px;
   width: 100%;
+  /* cambios */
 }
 
 .formLabel-root {
@@ -820,7 +816,27 @@ input[type="radio"]:checked + .button-label {
   width: 100%;
   height: 100%;
   max-width: 500px;
-  max-height: fit-content;
+  height: fit-content;
+}
+
+.popup-header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
+  h1 {
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+  }
 }
 
 .popup-item {
@@ -985,6 +1001,80 @@ input[type="radio"]:checked + .button-label {
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+/* EXITO */
+
+.thank-you-container {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+}
+
+.image-container img {
+  max-width: 650px;
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+}
+
+.checkmark-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(50%);
+  background-color: white;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.checkmark-icon {
+  width: 100px;
+  height: 100px;
+}
+
+.content-container {
+  padding: 40px 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  color: #1a73e8;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.finalize-button {
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
+  background-color: white;
+}
+
+.finalize-button:hover {
+  background-color: #ddd;
 }
 
 /*@media only screen and (min-width: 320px) and (max-width: 3840px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {*/
@@ -1426,10 +1516,6 @@ input[type="radio"]:checked + .button-label {
     padding: 20px;
     background-color: #e1f0fa;
     width: 100%;
-  }
-
-  .card-content {
-    display: flex;
   }
 
   .card-content > h1 {
