--- a/src/App.css
+++ b/src/App.css
@@ -1003,20 +1003,7 @@ input[type="radio"]:checked + .button-label {
   flex-direction: column;
 }
 
-/* EXITO */
-
-.thank-you-container {
-  width: 100%;
-  max-width: 500px;
-  margin: 0 auto;
-  text-align: center;
-  font-family: Arial, sans-serif;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  background-color: #fff;
-}
+/* VALIDAR CON AGENTE */
 
 .image-container {
   position: relative;
@@ -1075,6 +1062,21 @@ p {
 
 .finalize-button:hover {
   background-color: #ddd;
+}
+
+/* EXITO */
+
+.exito-container {
+  min-height: 450px;
+}
+
+.exito-content {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 /*@media only screen and (min-width: 320px) and (max-width: 3840px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {*/
