--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -688,8 +688,40 @@ button[type="submit"] {
 .popup-header {
   display: flex;
   a {
-    margin-left: 20px;
     font-size: 16px;
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
+  }
+}
+
+.popup-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 25px;
+
+  p {
+    margin: 0;
+    text-align: left;
+  }
+
+  .coinsIcon {
+    width: 50px;
+    height: 50px;
+  }
+
+  .carIcon {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.extra-info {
+  ul {
+    list-style-type: disc;
+    margin-left: 10px;
   }
 }
 
