--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -561,7 +561,6 @@ button[type="submit"] {
   border-radius: 25px;
   min-height: fit-content;
   overflow: visible;
-  pointer-events: none;
 }
 
 .card-header {
@@ -695,7 +694,10 @@ button[type="submit"] {
 }
 
 .mas-info {
-  margin-left: -190px;
+  margin-left: -150px;
+  font-size: 16px;
+  color: rgb(46, 78, 156);
+  text-decoration: underline;
 }
 
 .cuota {
@@ -839,8 +841,20 @@ p {
   min-height: 450px;
 }
 
-.finalize-button:hover {
-  background-color: #ddd;
+.exito-content {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  h1 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
 }
 
 /*   my changes   */
@@ -870,7 +884,7 @@ p {
 
 .popup {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
@@ -878,6 +892,46 @@ p {
   padding: 20px;
   width: 300px;
   z-index: 2;
+}
+
+.popup-header {
+  display: flex;
+  a {
+    font-size: 16px;
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
+  }
+}
+
+.popup-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 25px;
+
+  p {
+    margin: 0;
+    text-align: left;
+  }
+
+  .coinsIcon {
+    width: 50px;
+    height: 50px;
+  }
+
+  .carIcon {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.extra-info {
+  ul {
+    list-style-type: disc;
+    margin-left: 10px;
+  }
 }
 
 .popup-head {
