--- a/src/App.css
+++ b/src/App.css
@@ -164,15 +164,38 @@ input[type="number"],
 input[type="tel"],
 input[type="email"],
 input[type="date"] {
-  width: 430px;
+  width: 100%; /* Asegura que el input ocupe todo el espacio disponible */
+  max-width: 430px; /* Ajusta este valor según tu diseño */
+  height: 60px; /* Asegura que todos los inputs tengan la misma altura */
   padding: 12px 20px;
-  margin: 8px 8px;
+  margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  vertical-align: right;
+}
+
+select.form-input {
+  width: 100%;
   height: 60px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.EntradaMoneda {
+  width: 100%;
+  max-width: 430px;
+  height: 60px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 /* Style the submit button */
@@ -298,6 +321,26 @@ header {
   align-content: space-evenly;
   text-align: center;
   font-weight: bold;
+}
+
+.home-button-container {
+  a {
+    min-width: 650px;
+  }
+}
+
+.financiar-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 5px;
+
+  img {
+    width: 80px;
+  }
 }
 
 .tipo-seleccion {
@@ -1101,8 +1144,6 @@ p {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-  width: calc(100% - 15px);
-  margin-left: 10px;
 }
 
 .file-label {
@@ -1142,6 +1183,11 @@ p {
   justify-self: end;
   width: 80%;
   margin-bottom: 40px;
+
+  span {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 .vehiculo-year-container {
@@ -1405,15 +1451,39 @@ p {
   input[type="tel"],
   input[type="email"],
   input[type="date"] {
-    width: 100%;
+    width: 100%; /* Asegura que el input ocupe todo el espacio disponible */
+    max-width: 430px; /* Ajusta este valor según tu diseño */
+    height: 60px; /* Asegura que todos los inputs tengan la misma altura */
     padding: 12px 20px;
-    margin: 8px 8px;
+    margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    vertical-align: right;
+  }
+
+  select.form-input {
+    width: 100%;
+    max-width: 430px;
     height: 60px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  .EntradaMoneda {
+    width: 100%;
+    max-width: 430px;
+    height: 60px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
   }
 
   /* Style the submit button */
