credit form css changed & sass implemented

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/exacti/floating-labels@latest/floating-labels.min.css");
 /* @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"); */
 @import url("https://cdn.muicss.com/mui-0.10.3/css/mui.min.css");
-@import "./assets/styles/settings.css";
+@import "./assets/styles/settings.scss";
 
 * {
   margin: 0;
@@ -69,6 +69,19 @@ body {
   /* height: 100%; */
 }
 
+.error-msg {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 20px;
+  border: 1px solid red;
+  border-radius: 5px;
+  white-space: pre-line;
+  text-align: center;
+  background-color: $light-red;
+  padding: 10px 5px 10px 5px;
+  width: 100%;
+}
+
 /* HTML COMPONENTS */
 
 .button-link {
@@ -85,14 +98,7 @@ body {
 }
 
 .button-link:hover {
-  background-color: var(--base-blue);
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+  background-color: $base-blue;
 }
 
 .form-input option[disabled] {
@@ -115,45 +121,41 @@ li {
   /* Add some space between the list items */
 }
 
-h1 {
+/* h1 {
   color: #004e9c;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
-}
-
-p {
-  font-size: 15px;
-  text-align: center;
-}
+} */
 
 /* Style inputs */
 input[type="text"],
 input[type="number"],
 input[type="tel"],
 input[type="email"],
-input[type="date"] {
-  width: 100%; /* Asegura que el input ocupe todo el espacio disponible */
-  max-width: 430px; /* Ajusta este valor según tu diseño */
-  height: 60px; /* Asegura que todos los inputs tengan la misma altura */
+input[type="date"],
+input[type="work-type"] {
+  width: 100%;
+  height: 60px;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 10px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid $grey-border;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-select.form-input {
+/* .form-input {
+  grid-column: span 1;
   width: 100%;
-  height: 60px;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 10px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-}
+  height: 60px;
+} */
 
 .EntradaMoneda {
   width: 100%;
@@ -162,7 +164,7 @@ select.form-input {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid $grey-border;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -187,9 +189,9 @@ input[type="submit"]:hover {
 .back-btn {
   margin-top: 25px;
   justify-content: center;
-  background-color: #ffffff;
-  border: 1px solid var(--grey-border);
-  color: var(--grey);
+  background-color: white;
+  border: 1px solid $grey-border;
+  color: $grey;
   cursor: pointer;
   width: 150px;
   font-weight: bold;
@@ -337,13 +339,6 @@ input[type="submit"]:hover {
   font-weight: bold;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 20px 0 20px;
-}
-
 label {
   /*display: block;*/
   margin-bottom: 10px;
@@ -387,44 +382,11 @@ label > span {
   text-decoration: none;
 } */
 
-button[type="submit"] {
-  /* Style the submit button */
-  background-color: #1c4f97;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
 button[type="submit"]:disabled {
   /* Style the submit button when it's disabled */
   background-color: #ccc;
   color: #666;
   cursor: not-allowed;
-}
-
-.step-circle {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  background-color: #7a7979;
-  color: #fff;
-  text-align: center;
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 10px;
-}
-
-.step-circle.active {
-  background-color: #004e9c;
-}
-
-.step-label {
-  font-size: 16px;
-  color: #333;
-  margin-left: 15px;
 }
 
 .wizard-content {
@@ -499,17 +461,6 @@ input[type="radio"]:checked + .button-label {
   align-items: center;
 }
 
-.navButtonContainer {
-  /* display: flex;
-  gap: 20px;
-  width: 100%;
-  justify-content: center; */
-  gap: 20px;
-  grid-column: span 2;
-  display: flex;
-  width: 93%;
-}
-
 .info-credito {
   width: 100%;
   display: flex;
@@ -517,67 +468,11 @@ input[type="radio"]:checked + .button-label {
   align-items: center;
 }
 
-.atrasButton {
-  background-color: #ffffff;
-  border: 1px solid #ccc;
-  color: #9b9a9a;
-  /* padding: 10px 20px; */
-  /* border-radius: 20px; */
-  cursor: pointer;
-  width: 182px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  padding: 10px 20px;
-  margin: 8px 0;
-  border-radius: 25px;
-}
-
-.continuarButton {
-  background-color: #004e9c;
-  color: #ffffff;
-  padding: 10px 20px;
-  margin: 8px 0;
-  border-radius: 25px;
-  cursor: pointer;
-  position: relative;
-  font-weight: bold;
-  width: 250px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.continuarButton::after {
-  content: ">";
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 18px;
-  font-weight: normal;
-  color: #ffffff;
-}
-
 .form-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
   width: 550px;
-}
-
-.form-input {
-  grid-column: span 1;
-  /* width: 430px; */
-  width: 100%;
-  padding: 12px 20px;
-  /* margin: 8px 8px; */
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  height: 60px;
 }
 
 /* change icon to blue #004E9C */
@@ -616,95 +511,12 @@ input[type="radio"]:checked + .button-label {
   margin: 10px;
 }
 
-.input-container {
-  display: flex;
-  flex-wrap: nowrap;
-  width: 446px;
-}
-
-.input-container > * {
-  flex-basis: 50% !important;
-}
-
-.formControl-root {
-  border: 0;
-  margin: 0;
-  display: inline-flex;
-  padding: 0;
-  position: relative;
-  min-width: 0;
-  flex-direction: column;
-  vertical-align: top;
-  margin-bottom: 25px;
-  /* width: 100%; */
-  width: 93%;
-}
-
-.formLabel-root {
-  color: rgba(0, 0, 0, 0.54);
-  padding: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1;
-}
-
-.inputLabel-formControl {
-  top: 5px;
-  left: 15px;
-  position: absolute;
-}
-
-.inputLabel-root {
-  display: block;
-  background-color: white;
-}
-
-.inputLabel-outlined {
-  z-index: 1;
-  pointer-events: none;
-  font-weight: bolder;
-  font-size: smaller;
-  color: #000000;
-}
-
-.outlinedInput-root {
-  background-color: white;
-  width: 100%;
-}
+// .input-container > * {
+//   flex-basis: 50% !important;
+// }
 
 .textField-root {
   border-radius: 8px;
-}
-
-.inputBase-root {
-  color: rgba(0, 0, 0, 0.87);
-  cursor: text;
-  display: inline-flex;
-  position: relative;
-  font-size: 1rem;
-  box-sizing: border-box;
-  align-items: center;
-  font-family: Encode Sans Semi Condensed, sans-serif;
-  font-weight: 400;
-  line-height: 1.1876em;
-}
-
-.inputBase-input {
-  font: inherit;
-  color: currentColor;
-  width: 100%;
-  border: 0;
-  height: 1.1876em;
-  margin: 0;
-  display: block;
-  padding: 6px 0 7px;
-  min-width: 0;
-  background: none;
-  box-sizing: content-box;
-  animation-name: mui-auto-fill-cancel;
-  letter-spacing: inherit;
-  animation-duration: 10ms;
-  -webkit-tap-highlight-color: transparent;
 }
 
 .tooltip-container {
@@ -1010,11 +822,6 @@ h2 {
   margin-bottom: 10px;
 }
 
-p {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
 .finalize-button {
   border: 1px solid #ccc;
   border-radius: 25px;
@@ -1098,18 +905,4 @@ p {
   position: relative;
   left: -25%;
   width: 50%;
-}
-
-/* ERROR MSG */
-
-.error-msg {
-  color: red;
-  font-size: 14px;
-  margin-bottom: 10px;
-  border: 1px solid red;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #fdd;
-  white-space: pre-line;
-  text-align: center;
 }
